# claimanchor

./: .env.example  .gitignore  FEEDBACK.md  README.md  __init__.py  agent.card.json  config.py  handler.py  prompts_biomed.py  pyproject.toml  research_tools.py  tool_schemas.py  verification.py
scripts/: demo.py  eval.py  integration_test.py  mock_anthropic_server.py  model_bridge.py  smoke_test.py
tests/: conftest.py  test_handler.py  test_research_tools.py  test_verification.py
