[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skeleton"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # A2AStarletteApplication needs starlette + sse-starlette (+ fastapi), which
    # live in a2a-sdk's optional `http-server` extra. Pin exactly: newer a2a-sdk
    # releases moved a2a.server.apps. Only needed to SERVE — the engine and
    # `serve check` import and run without it (see a2a_runtime's import guard).
    "a2a-sdk[http-server]==0.3.2",
    # ClaimAnchor drives Claude through the official Anthropic SDK (Path B handler).
    # Only needed to actually run the agent; imports are lazy so `serve check` and
    # the offline test suite run on the standard library alone.
    "anthropic>=0.116",
    "openai>=1.40",   # retained for the template's Path-A engine (unused by ClaimAnchor)
    "uvicorn>=0.30",
]

# pyproject.toml lives *inside* the package directory, so map the `agent_skeleton`
# import package to "." (this directory). Subpackages must be listed explicitly:
# with package-dir mapped to ".", setuptools find-discovery would treat
# system_tools/ and endpoint_wrapper/ as *top-level* packages, so we name them here.
[tool.setuptools]
packages = [
    "agent_skeleton",
    "agent_skeleton.system_tools",
    "agent_skeleton.endpoint_wrapper",
]

[tool.setuptools.package-dir]
agent_skeleton = "."
